[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
ethers = "2.0.14"
serde = "1.0.198"
serde_json = "1.0.116"
structopt = "0.3.26"
termion = "3.0.0"
tokio = { version = "1.30.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
    "signal",
    "fs",
] }
tokio-util = "0.7"
